--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <p class="detail">websites/applications.!</p>
         </div>
         
-        <button class="reach-btn"><span class="text">Reach Out</span></button>
+<!--         <button class="reach-btn"><span class="text">Reach Out</span></button> -->
+        <button class="reach-btn"><span class="text"><a href="https://www.linkedin.com/in/debanga-dutta-3021281b4/" target="_blank">Reach Out</a></span></button>
         <!-- <a id="navlink" href="#target"><ion-icon class="scroll-down" name="chevron-down-outline"></ion-icon></a> -->
         <!-- <a id="navlink" ><ion-icon class="scroll-down" name="chevron-down-outline"></ion-icon></a> -->
         
