--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 
     </div>
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
-<!-- <script src="https://unpkg.com/lenis@1.1.3/dist/lenis.min.js"></script>  -->
+<script src="https://unpkg.com/lenis@1.1.3/dist/lenis.min.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.0.0/dist/ionicons/ionicons.esm.js"></script>
 <script src="script.js"></script>
 <script src="index.js"></script>
